--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
           class="w-100 mw8 ph4-l ph3 center pt2 pb3 flex items-baseline flex flex-wrap"
         >
           <a href="/" class="dib f2 f3-ns fw6 link black hover-cmu-red center-s pb3 pr3">
-            CMU DIG
+            GT DSA
             <picture>
               <source
                 srcset="{{ '/assets/logo-light.svg' | relative_url }}"
@@ -54,7 +54,7 @@
                 >News</a
               >
             </div>
-            <div class="tc ml3-m ml4-l">
+            <!-- <div class="tc ml3-m ml4-l">
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
                 href="https://github.com/cmudig"
@@ -66,7 +66,7 @@
               >
                 <i class="fab fa-mastodon mr2"></i>Mastodon</a
               >
-            </div>
+            </div> -->
           </nav>
         </div>
       </header>
@@ -81,7 +81,7 @@
         <div class="flex flex-row-ns flex-column">
           <div class="w-50-ns">
             <div class="pv1">
-              Hello from Pittsburgh.
+              Hello from Atlanta.
               <a
                 href="{{ '/team' | relative_url }}"
                 class="link white dim underline"
@@ -97,12 +97,12 @@
                 >Edit this page</a
               >
             </div>
-            <div class="pv1">
+            <!-- <div class="pv1">
               We are at <a rel="me" href="https://hci.social/@cmudig" class="link white dim">@cmudig@hci.social</a> and
               <a href="https://twitter.com/cmudig" class="link white dim">@cmudig</a>.
-            </div>
+            </div> -->
             <div class="pv1">
-              Our lab is in NSH A408.
+              Our lab is in <>.
             </div>
             <div class="pt4">
               <abbr
@@ -117,18 +117,13 @@
             <h4 class="white mt0-ns">Links</h4>
             <ul class="list pl0">
               <li>
-                <a href="https://hcii.cmu.edu" class="link white dim pv1 dib"
-                  >Human-Computer Interaction Institute</a
-                >
-              </li>
-              <li>
-                <a href="https://www.cs.cmu.edu" class="link white dim pv1 dib"
+                <a href="https://www.scs.gatech.edu/" class="link white dim pv1 dib"
                   >School of Computer Science</a
                 >
               </li>
               <li>
-                <a href="https://www.cmu.edu" class="link white dim pv1 dib"
-                  >Carnegie Mellon University</a
+                <a href="https://www.gatech.edu/" class="link white dim pv1 dib"
+                  >Georgia Tech</a
                 >
               </li>
             </ul>
