--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -56,8 +56,11 @@ layout: default
 </div>
 
 <div class="w-100 mw8 ph4-l ph3 center mt4">
-  {% assign filename = 'assets' | append: page.url | replace: '.html', '.png' %}
-  <img src="{{ filename | relative_url }}" alt="Teaser image" class="mw-100" style="max-height: 600px">
+
+  {% if page.teaser_image %}
+    {% assign filename = 'assets' | append: page.url | replace: '.html', '.png' %}
+    <img src="{{ filename | relative_url }}" alt="Teaser image" class="mw-100" style="max-height: 600px">
+  {% endif %}
 
   {% if page.tweet %}
     <p class="measure-wide">
