added db github logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,19 +54,19 @@
                 >News</a
               >
             </div>
-            <!-- <div class="tc ml3-m ml4-l">
+            <div class="tc ml3-m ml4-l">
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
-                href="https://github.com/cmudig"
+                href="https://github.com/georgia-tech-db/"
                 ><i class="fab fa-github mr2"></i>GitHub</a
               >
-              <a
+              <!-- <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
                 href="https://hci.social/@cmudig"
               >
                 <i class="fab fa-mastodon mr2"></i>Mastodon</a
-              >
-            </div> -->
+              > -->
+            </div>
           </nav>
         </div>
       </header>
