--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,27 +7,12 @@
         <div
           class="w-100 mw8 ph4-l ph3 center pt2 pb3 flex items-baseline flex flex-wrap"
         >
-          <a href="/" class="dib f2 f3-ns fw6 link black hover-cmu-red center-s pb3 pr3">
-            GT DSA
-            <picture>
-              <source
-                srcset="{{ '/assets/logo-light.svg' | relative_url }}"
-                type="image/svg+xml"
-              />
-              <source
-                srcset="{{ '/assets/logo-light.webp' | relative_url }}"
-                type="image/webp"
-              />
-              <source
-                srcset="{{ '/assets/logo-light.png' | relative_url }}"
-                type="image/png"
-              />
-              <img
-                alt="The CMU mascot Scotty, who is a black dog, digging up dirt."
-                class="pl2 w3"
-                style="margin-bottom: -1.3rem"
-              />
-            </picture>
+          <a href="/" class="dib f2 f3-ns fw6 link black hover-cmu-red center-s pb3 pr3" style="width: 15%;">
+          <img
+            alt="GT logo"
+            style="width: 100%;"
+            src="{{ '/assets/logo-light.png' | relative_url }}"
+          />
           </a>
           <nav
             class="mt2 ml-auto-ns lh-copy w-auto-ns w-100 flex flex-column flex-row-ns f4 f5-ns"
