--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
     ></div>
     <div class="measure-wide">
       <div class="mb1">
-        <a href="{{ pub.url }}" class="b link black hover-cmu-red"
+        <a href="{{ pub.url }}" class="b link black hover-gt-blue"
           >{{ pub.title }}</a
         >
         <span class="fw2">
@@ -17,7 +17,7 @@
           unless forloop.last %}, {% endunless %}{% endfor %}</span
         >, <span>{{ pub.venue }} {{ pub.year }}</span>
         {% if pub.awards %}
-          <span class="cmu-red mv1 b nowrap">
+          <span class="gt-blue mv1 b nowrap">
             {% for award in pub.awards %}{{ award }}{% unless forloop.last %}, {% endunless %}
             {% endfor %}
           </span>
