--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,46 +7,46 @@
         <div
           class="w-100 mw8 ph4-l ph3 center pt2 pb3 flex items-baseline flex flex-wrap"
         >
-          <a href="/" class="dib f2 f3-ns fw6 link black hover-cmu-red center-s pb3 pr3" style="width: 15%;">
+          <a href="/" class="dib f2 f3-ns fw6 link black hover-gt-blue center-s" style="width: 15%; height: 95%;">
           <img
             alt="GT logo"
-            style="width: 100%;"
+            style="width: 100%; height: 60%;"
             src="{{ '/assets/logo-light.png' | relative_url }}"
           />
           </a>
           <nav
-            class="mt2 ml-auto-ns lh-copy w-auto-ns w-100 flex flex-column flex-row-ns f4 f5-ns"
+            class="ml-auto-ns lh-copy w-auto-ns w-100 flex flex-column flex-row-ns f4 f5-ns"
           >
-            <div class="tc mt0-ns mt2">
+            <div class="tc mt0-ns">
               <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/about' | relative_url }}"
                 >About</a
               >
               <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/team' | relative_url }}"
                 >Team</a
               >
               <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/publications' | relative_url }}"
                 >Publications</a
               >
               <!-- <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/news' | relative_url }}"
                 >News</a
               > -->
             </div>
             <div class="tc ml3-m ml4-l">
               <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="https://github.com/georgia-tech-db/"
                 ><i class="fab fa-github mr2"></i>GitHub</a
               >
               <!-- <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-cmu-red link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="https://hci.social/@cmudig"
               >
                 <i class="fab fa-mastodon mr2"></i>Mastodon</a
@@ -61,7 +61,7 @@
       </main>
     </div>
 
-    <footer class="bt bg-cmu-dark-gray white mt5 flex-shrink-0">
+    <footer class="bt bg-gt-dark-gray white mt5 flex-shrink-0">
       <div class="w-100 mw8 ph4-l ph3 center pv5">
         <div class="flex flex-row-ns flex-column">
           <div class="w-50-ns">
@@ -74,20 +74,7 @@
               >
             </div>
             <div class="pv1">
-              <a
-                href="https://github.com/cmudig/cmudig.github.io/edit/main/{{
-                  page.path
-                }}"
-                class="link white dim"
-                >Edit this page</a
-              >
-            </div>
-            <!-- <div class="pv1">
-              We are at <a rel="me" href="https://hci.social/@cmudig" class="link white dim">@cmudig@hci.social</a> and
-              <a href="https://twitter.com/cmudig" class="link white dim">@cmudig</a>.
-            </div> -->
-            <div class="pv1">
-              Our lab is in <>.
+              Our lab is in Klaus 3319.
             </div>
             <div class="pt4">
               <abbr
