--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
         <div class="flex flex-row-ns flex-column">
           <div class="w-50-ns">
             <div class="pv1">
-              Hello from Atlanta.
+              Hello from Atlanta, GA, USA.
               <a
                 href="{{ '/team' | relative_url }}"
                 class="link white dim underline"
