made more chnages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,17 @@
           <nav
             class="ml-auto-ns lh-copy w-auto-ns w-100 flex flex-column flex-row-ns f4 f5-ns"
           >
-          <a href="/" class="dib f2 f3-ns fw6 link black hover-gt-blue center-s" style="width: 15%; height: 95%;">
+          
+          <a href="https://www.gatech.edu/" class="dib f2 f3-ns fw6 link black hover-gt-blue center-s" style="width: 15%; height: 95%;">
+
             <img
+            class="w3" 
               alt="GT logo"
               style="width: 100%; height: 60%;"
               src="{{ '/assets/logo-light.png' | relative_url }}"
             />
-            </a>
+            </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div class="tc mt0-ns pt3" style="margin-right: auto;"><strong><a href="/" class="black link">DSA group</a></strong></div>
             <div class="tc mt0-ns pt3" style="margin-left: auto;">
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
