moved button for home to the right of navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,14 @@
               style="width: 100%; height: 60%;"
               src="{{ '/assets/logo-light.png' | relative_url }}"
             />
-            </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div class="tc mt0-ns pt3" style="margin-right: auto;"><strong><a href="/" class="black link">DSA group</a></strong></div>
+            </a>
             <div class="tc mt0-ns pt3" style="margin-left: auto;">
+              <a
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
+                href="{{ '/' | relative_url }}"
+                style="color: #B3A369"
+                >DSA group</a
+              >
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/about' | relative_url }}"
