made navbar home (DSA group) button class more modular

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,8 @@
             </a>
             <div class="tc mt0-ns pt3" style="margin-left: auto;">
               <a
-                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b gold-link link dib"
                 href="{{ '/' | relative_url }}"
-                style="color: #B3A369"
                 >DSA group</a
               >
               <a
