--- a/styles.scss
+++ b/styles.scss
@@ -41,7 +41,23 @@ body {
   --text-color: #000;
 }
 
-a.gold-link {
+a.gt-gold-link {
+  color: var(--gt-gold);
+  font-size: large;
+  font-weight: bold;
+}
+
+div.gt-blue-color {
+  color: var(--gt-blue);
+  font-weight: bold;
+}
+
+span.gt-blue-color {
+  color: var(--gt-blue);
+  font-weight: bold;
+}
+
+span.gt-gold-color {
   color: var(--gt-gold);
   font-size: large;
   font-weight: bold;
