--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,14 +8,14 @@
       style="background-image: url('{{ thumb | relative_url }}')"
     ></div>
     <div class="measure-wide">
-      <div class="mb1">
+      <div class="mb1" style="font-size: larger;">
         <a href="{{ pub.url }}" class="b link black hover-gt-blue"
           >{{ pub.title }}</a
         >
         <span class="fw2">
-          {% for author in pub.authors %}{% include person name=author %}{%
-          unless forloop.last %}, {% endunless %}{% endfor %}</span
-        >, <span>{{ pub.venue }} {{ pub.year }}</span>
+        {% for author in pub.authors %}{% include person name=author %}{% unless forloop.last %}, {% endunless %}
+        {% endfor %}</span
+        ><span><div class="gt-blue-color">{{ pub.venue }} {{ pub.year }}</div></span>
         {% if pub.awards %}
           <span class="gt-blue mv1 b nowrap">
             {% for award in pub.awards %}{{ award }}{% unless forloop.last %}, {% endunless %}
