--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,15 @@
             class="ml-auto-ns lh-copy w-auto-ns w-100 flex flex-column flex-row-ns f4 f5-ns"
           >
           
-          <a href="https://www.gatech.edu/" class="dib f2 f3-ns fw6 link black hover-gt-blue center-s" style="width: 15%; height: 95%;">
+          <div class="dib f2 f3-ns fw6 link black hover-gt-blue center-s" style="width: 15%; height: 95%;">
 
             <img
-            class="w3" 
+            class="w3 dib f2 f3-ns fw6 link black hover-gt-blue center-s" 
               alt="GT logo"
               style="width: 100%; height: 60%;"
               src="{{ '/assets/logo-light.png' | relative_url }}"
             />
-            </a>
+          </div>
             <div class="tc mt0-ns pt3" style="margin-left: auto;">
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b gt-gold-link link dib"
