updated site favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   />
   <link href="{{ '/styles.css' | relative_url }}" rel="stylesheet" />
 
-  <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}" />
+  <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | relative_url }}" />
   <link
     rel="icon"
     type="image/png"
