added link for dsa reading grp schedule and github url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,11 @@
               >
               <a
                 class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
+                href="{{ site.reading_grp_url }}"
+                >Schedule</a
+              >              
+              <a
+                class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
                 href="{{ '/about' | relative_url }}"
                 >About</a
               >
@@ -43,7 +48,7 @@
               >
               <a
               class="ml4-l ml3-m pa0-ns ph2 pv1 b black hover-gt-blue link dib"
-              href="https://github.com/georgia-tech-db/"
+              href="{{ site.github_url }}"
               ><i class="fab fa-github mr2"></i>GitHub</a
             >
               <!-- <a
